PF-230: Added examples creation with project

--- a/.github/workflows/browser-tests.yml
+++ b/.github/workflows/browser-tests.yml
@@ -2,7 +2,7 @@ name: Browser Auto Tests
 
 on:
   push:
-    branches: [ "dev", "v2", "main", "PF-230" ]
+    branches: [ "dev", "main"]
 
 jobs:
   test:
