--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   perforge:
-    image: perforge/perforge-app:latest
+    image: perforge/perforge-app:2.0.2
     container_name: perforge
     ports:
       - "7878:7878"
@@ -64,4 +64,3 @@ volumes:
 
 networks:
   perforge-net:
-
