--- a/.github/workflows/browser-tests.yml
+++ b/.github/workflows/browser-tests.yml
@@ -36,7 +36,7 @@ jobs:
         run: docker compose -f docker-compose.test.yml up -d --build
 
       - name: Build and Run Integration Services
-        run: docker compose -f docker-compose.yml up -d
+        run: docker compose -f docker-compose.yml up -d influxdb grafana renderer
 
       - name: Wait for Services to be Ready
         run: |
