--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flask_mail==0.10.0
 flask_sqlalchemy==3.1.1
 flask_wtf==1.2.2
 gunicorn==23.0.0
+influxdb==5.3.2
 influxdb-client==1.49.0
 jinja2==3.1.6
 Pillow==11.2.1
