--- a/requirements.txt
+++ b/requirements.txt
@@ -30,8 +30,10 @@ matplotlib==3.10.3
 langchain-google-genai==2.1.10
 langchain-community==0.3.29
 langchain==0.3.27
-langchain_core==0.3.75
+langchain-core==0.3.75
 langchain_openai==0.3.32
+langchain-anthropic==0.3.5
+anthropic==0.45.1
 lxml==6.0.0
 plotly==6.2.0
 kaleido==1.0.0
